[metadata]
name = snx
version = 0.0.0
url = http://github.com/ahopkins/snx/
license = MIT
author = Adam Hopkins
description = TBD
long_description = file: README.rst
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
packages = find:
install_requires =

[options.entry_points]
console_scripts =
    snx = snx.__main__:main
